# rust-serialization-benchmarks

./: .gitmodules  Makefile  README.md
c++/: Makefile  bench.h  log.cc
go/: .gitignore  Makefile
rust/: .gitignore  Cargo.toml  Makefile  build.rs  log_proto.rs
rust/benches/: bench.rs
rust/src/: country.capnp  country_capnp.rs  goser.rs  lib.rs  log.capnp  log.fbs  log.proto  log_capnp.rs  log_proto.proto  log_proto.rs  writer.rs
src/: goser_log.json
