[package]
name = "rust-serde-benchmarks"
version = "0.0.1"
authors = ["erick.tryzelaar@gmail.com"]
build = "build.rs"

[build-dependencies]
capnpc = "*"

[dependencies]
bincode = "*"
capnp = "*"
num = "*"
protobuf = "*"
rmp-serialize = "*"
rustc-serialize = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
