[package]
name = "rust-serde-benchmarks"
version = "0.0.1"
authors = ["erick.tryzelaar@gmail.com"]
build = "build.rs"

[build-dependencies]
capnpc = "0.9"
protoc-rust = "2.0"

[dependencies]
bincode = "1.0"
capnp = "0.9"
num-derive = "0.2"
num-traits = "0.2"
protobuf = "2.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
