[package]
name = "rust-serde-benchmarks"
version = "0.0.1"
authors = ["erick.tryzelaar@gmail.com"]
build = "build.rs"

[build-dependencies]
capnpc = "0.9"
flatc-rust = "0.1"
protoc-rust = "2.0"

[dependencies]
bincode = "1.3"
capnp = "0.9"
flatbuffers = "0.5"
num-derive = "0.2"
num-traits = "0.2"
protobuf = "2.18"
rmp-serde = "0.15.0"
rmpv = { "version" = "0.4.6", "features" = ["with-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
